<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/dialog_detail_margin"
    android:elevation="2dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_item_detail"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/item_name_margin"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"/>

        <EditText
            android:id="@+id/dialogNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="@dimen/name_edttxtheight"
            android:layout_margin="@dimen/dialog_margin"
            android:text=""
            android:hint="@string/please_enter_name"
            android:layout_below="@+id/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:maxLines="2"
            android:inputType="text" />


        <EditText
            android:id="@+id/dialogAmountEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogNameEt"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dialog_margin"
            android:hint="@string/please_enter_amount"
            android:maxHeight="20dp"
            android:maxLines="2"
            android:inputType="number"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelDialogbtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/okDialogbtn"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okDialogbtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/ok" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>

</layout>