<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:elevation="2dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/item_name_margin"
                android:text="@string/groceries_detail_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/dialogNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/dialog_margin"
                android:hint="@string/please_enter_name"
                android:maxHeight="@dimen/dialog_item_height"
                android:maxLines="2"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                tools:ignore="Autofill" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelbtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/okbtn"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/okbtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/ok" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>