<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_home_height"
        android:layout_margin="@dimen/pre_list_margin"
        android:elevation="2dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_margin="@dimen/item_name_margin"
                android:text="@string/static_pending"
                app:layout_constraintWidth_percent="0.3"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/item_name_txt_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/row_grocery_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_name_margin"
                android:gravity="start"
                android:text="@string/static_shopping"
                android:maxLines="1"
                app:layout_constraintWidth_percent="0.6"
                android:ellipsize="end"
                android:textSize="@dimen/item_name_txt_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <ImageView
                android:id="@+id/row_item_status"
                android:layout_width="@dimen/forward_wd_hght"
                android:layout_height="@dimen/forward_wd_hght"
                android:layout_margin="@dimen/forward_margin"
                android:gravity="center"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:contentDescription="@string/forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_amount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_name_margin"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/timestampe_margin"
                android:gravity="center"
                android:inputType="datetime"
                android:text="@string/total_amount_txt"
                android:textSize="@dimen/status_txt_size"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/total_items_txt"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/items_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/timestampe_margin"
                android:gravity="start"
                android:inputType="datetime"
                android:text=""
                android:textSize="@dimen/status_txt_size"
                app:layout_constraintBottom_toTopOf="@+id/item_count"
                app:layout_constraintStart_toEndOf="@+id/total_amount_txt"
                android:maxLines="1"
                app:layout_constraintWidth_percent="0.3"
                android:ellipsize="end"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/total_items_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_name_margin"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="@dimen/timestampe_margin"
                android:gravity="center"
                android:inputType="datetime"
                android:text="@string/total_items_txt"
                android:textSize="@dimen/status_txt_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/timestampe_margin"
                android:gravity="center"
                android:inputType="datetime"
                android:text=""
                android:textSize="@dimen/timestamp_txt_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/total_items_txt"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/item_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/timestampe_margin"
                android:gravity="center"
                android:inputType="datetime"
                android:text=""
                android:textSize="@dimen/status_txt_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextViewEdits" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</layout>